# serializer version: 1
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_battery_charging-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.power_pet_door_battery_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Battery charging',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_charging',
    'unique_id': '192.0.2.10:3000-battery_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_battery_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'Power Pet Door Battery charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_battery_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_inside_schedule-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.power_pet_door_inside_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Inside schedule',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'inside_schedule',
    'unique_id': '192.0.2.10:3000-inside_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_inside_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Inside schedule',
      'next_event': None,
      'schedule': dict({
      }),
      'schedule_count': 0,
      'schedule_entries': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_inside_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_mains_power-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.power_pet_door_mains_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Mains power',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mains_power',
    'unique_id': '192.0.2.10:3000-mains_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_mains_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'Power Pet Door Mains power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_mains_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_outside_schedule-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.power_pet_door_outside_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Outside schedule',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outside_schedule',
    'unique_id': '192.0.2.10:3000-outside_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_outside_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Outside schedule',
      'next_event': None,
      'schedule': dict({
      }),
      'schedule_count': 0,
      'schedule_entries': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_outside_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_remote_key_set-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.power_pet_door_remote_key_set',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remote key set',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remote_key',
    'unique_id': '192.0.2.10:3000-remote_key',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_remote_key_set-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Remote key set',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_remote_key_set',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_remote_paired-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.power_pet_door_remote_paired',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remote paired',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remote_id',
    'unique_id': '192.0.2.10:3000-remote_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[binary_sensor][binary_sensor.power_pet_door_remote_paired-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Remote paired',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.power_pet_door_remote_paired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_close-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.power_pet_door_close',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Close',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'close',
    'unique_id': '192.0.2.10:3000-close',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_close-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Close',
    }),
    'context': <ANY>,
    'entity_id': 'button.power_pet_door_close',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_open-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.power_pet_door_open',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Open',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'open',
    'unique_id': '192.0.2.10:3000-open',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_open-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Open',
    }),
    'context': <ANY>,
    'entity_id': 'button.power_pet_door_open',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_open_and_auto_close-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.power_pet_door_open_and_auto_close',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Open and auto-close',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cycle',
    'unique_id': '192.0.2.10:3000-cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_open_and_auto_close-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Open and auto-close',
    }),
    'context': <ANY>,
    'entity_id': 'button.power_pet_door_open_and_auto_close',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_toggle-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.power_pet_door_toggle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Toggle',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'toggle',
    'unique_id': '192.0.2.10:3000-toggle',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[button][button.power_pet_door_toggle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Toggle',
    }),
    'context': <ANY>,
    'entity_id': 'button.power_pet_door_toggle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[cover][cover.power_pet_door_door-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.power_pet_door_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': 'Door',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'door',
    'unique_id': '192.0.2.10:3000-door',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[cover][cover.power_pet_door_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'shutter',
      'friendly_name': 'Power Pet Door Door',
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.power_pet_door_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_hold_open_time-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 8.0,
      'min': 2.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 2.0,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.power_pet_door_hold_open_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Hold open time',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hold_open_time',
    'unique_id': '192.0.2.10:3000-hold_open_time',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_hold_open_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Power Pet Door Hold open time',
      'max': 8.0,
      'min': 2.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 2.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.power_pet_door_hold_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_sensor_trigger_voltage-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 5.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.001,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.power_pet_door_sensor_trigger_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Sensor trigger voltage',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sensor_trigger_voltage',
    'unique_id': '192.0.2.10:3000-sensor_trigger_voltage',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_sensor_trigger_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Power Pet Door Sensor trigger voltage',
      'max': 5.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.001,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.power_pet_door_sensor_trigger_voltage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_sleep_sensor_trigger_voltage-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 5.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.001,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.power_pet_door_sleep_sensor_trigger_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Sleep sensor trigger voltage',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_sensor_trigger_voltage',
    'unique_id': '192.0.2.10:3000-sleep_sensor_trigger_voltage',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[number][number.power_pet_door_sleep_sensor_trigger_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Power Pet Door Sleep sensor trigger voltage',
      'max': 5.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.001,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.power_pet_door_sleep_sensor_trigger_voltage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.9',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[select][select.power_pet_door_timezone-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Use Home Assistant timezone',
        'Africa/Abidjan',
        'Africa/Accra',
        'Africa/Addis_Ababa',
        'Africa/Algiers',
        'Africa/Asmara',
        'Africa/Asmera',
        'Africa/Bamako',
        'Africa/Bangui',
        'Africa/Banjul',
        'Africa/Bissau',
        'Africa/Blantyre',
        'Africa/Brazzaville',
        'Africa/Bujumbura',
        'Africa/Cairo',
        'Africa/Casablanca',
        'Africa/Ceuta',
        'Africa/Conakry',
        'Africa/Dakar',
        'Africa/Dar_es_Salaam',
        'Africa/Djibouti',
        'Africa/Douala',
        'Africa/El_Aaiun',
        'Africa/Freetown',
        'Africa/Gaborone',
        'Africa/Harare',
        'Africa/Johannesburg',
        'Africa/Juba',
        'Africa/Kampala',
        'Africa/Khartoum',
        'Africa/Kigali',
        'Africa/Kinshasa',
        'Africa/Lagos',
        'Africa/Libreville',
        'Africa/Lome',
        'Africa/Luanda',
        'Africa/Lubumbashi',
        'Africa/Lusaka',
        'Africa/Malabo',
        'Africa/Maputo',
        'Africa/Maseru',
        'Africa/Mbabane',
        'Africa/Mogadishu',
        'Africa/Monrovia',
        'Africa/Nairobi',
        'Africa/Ndjamena',
        'Africa/Niamey',
        'Africa/Nouakchott',
        'Africa/Ouagadougou',
        'Africa/Porto-Novo',
        'Africa/Sao_Tome',
        'Africa/Timbuktu',
        'Africa/Tripoli',
        'Africa/Tunis',
        'Africa/Windhoek',
        'America/Adak',
        'America/Anchorage',
        'America/Anguilla',
        'America/Antigua',
        'America/Araguaina',
        'America/Argentina/Buenos_Aires',
        'America/Argentina/Catamarca',
        'America/Argentina/ComodRivadavia',
        'America/Argentina/Cordoba',
        'America/Argentina/Jujuy',
        'America/Argentina/La_Rioja',
        'America/Argentina/Mendoza',
        'America/Argentina/Rio_Gallegos',
        'America/Argentina/Salta',
        'America/Argentina/San_Juan',
        'America/Argentina/San_Luis',
        'America/Argentina/Tucuman',
        'America/Argentina/Ushuaia',
        'America/Aruba',
        'America/Asuncion',
        'America/Atikokan',
        'America/Atka',
        'America/Bahia',
        'America/Bahia_Banderas',
        'America/Barbados',
        'America/Belem',
        'America/Belize',
        'America/Blanc-Sablon',
        'America/Boa_Vista',
        'America/Bogota',
        'America/Boise',
        'America/Buenos_Aires',
        'America/Cambridge_Bay',
        'America/Campo_Grande',
        'America/Cancun',
        'America/Caracas',
        'America/Catamarca',
        'America/Cayenne',
        'America/Cayman',
        'America/Chicago',
        'America/Chihuahua',
        'America/Ciudad_Juarez',
        'America/Coral_Harbour',
        'America/Cordoba',
        'America/Costa_Rica',
        'America/Coyhaique',
        'America/Creston',
        'America/Cuiaba',
        'America/Curacao',
        'America/Danmarkshavn',
        'America/Dawson',
        'America/Dawson_Creek',
        'America/Denver',
        'America/Detroit',
        'America/Dominica',
        'America/Edmonton',
        'America/Eirunepe',
        'America/El_Salvador',
        'America/Ensenada',
        'America/Fort_Nelson',
        'America/Fort_Wayne',
        'America/Fortaleza',
        'America/Glace_Bay',
        'America/Godthab',
        'America/Goose_Bay',
        'America/Grand_Turk',
        'America/Grenada',
        'America/Guadeloupe',
        'America/Guatemala',
        'America/Guayaquil',
        'America/Guyana',
        'America/Halifax',
        'America/Havana',
        'America/Hermosillo',
        'America/Indiana/Indianapolis',
        'America/Indiana/Knox',
        'America/Indiana/Marengo',
        'America/Indiana/Petersburg',
        'America/Indiana/Tell_City',
        'America/Indiana/Vevay',
        'America/Indiana/Vincennes',
        'America/Indiana/Winamac',
        'America/Indianapolis',
        'America/Inuvik',
        'America/Iqaluit',
        'America/Jamaica',
        'America/Jujuy',
        'America/Juneau',
        'America/Kentucky/Louisville',
        'America/Kentucky/Monticello',
        'America/Knox_IN',
        'America/Kralendijk',
        'America/La_Paz',
        'America/Lima',
        'America/Los_Angeles',
        'America/Louisville',
        'America/Lower_Princes',
        'America/Maceio',
        'America/Managua',
        'America/Manaus',
        'America/Marigot',
        'America/Martinique',
        'America/Matamoros',
        'America/Mazatlan',
        'America/Mendoza',
        'America/Menominee',
        'America/Merida',
        'America/Metlakatla',
        'America/Mexico_City',
        'America/Miquelon',
        'America/Moncton',
        'America/Monterrey',
        'America/Montevideo',
        'America/Montreal',
        'America/Montserrat',
        'America/Nassau',
        'America/New_York',
        'America/Nipigon',
        'America/Nome',
        'America/Noronha',
        'America/North_Dakota/Beulah',
        'America/North_Dakota/Center',
        'America/North_Dakota/New_Salem',
        'America/Nuuk',
        'America/Ojinaga',
        'America/Panama',
        'America/Pangnirtung',
        'America/Paramaribo',
        'America/Phoenix',
        'America/Port-au-Prince',
        'America/Port_of_Spain',
        'America/Porto_Acre',
        'America/Porto_Velho',
        'America/Puerto_Rico',
        'America/Punta_Arenas',
        'America/Rainy_River',
        'America/Rankin_Inlet',
        'America/Recife',
        'America/Regina',
        'America/Resolute',
        'America/Rio_Branco',
        'America/Rosario',
        'America/Santa_Isabel',
        'America/Santarem',
        'America/Santiago',
        'America/Santo_Domingo',
        'America/Sao_Paulo',
        'America/Scoresbysund',
        'America/Shiprock',
        'America/Sitka',
        'America/St_Barthelemy',
        'America/St_Johns',
        'America/St_Kitts',
        'America/St_Lucia',
        'America/St_Thomas',
        'America/St_Vincent',
        'America/Swift_Current',
        'America/Tegucigalpa',
        'America/Thule',
        'America/Thunder_Bay',
        'America/Tijuana',
        'America/Toronto',
        'America/Tortola',
        'America/Vancouver',
        'America/Virgin',
        'America/Whitehorse',
        'America/Winnipeg',
        'America/Yakutat',
        'America/Yellowknife',
        'Antarctica/Casey',
        'Antarctica/Davis',
        'Antarctica/DumontDUrville',
        'Antarctica/Macquarie',
        'Antarctica/Mawson',
        'Antarctica/McMurdo',
        'Antarctica/Palmer',
        'Antarctica/Rothera',
        'Antarctica/South_Pole',
        'Antarctica/Syowa',
        'Antarctica/Troll',
        'Antarctica/Vostok',
        'Arctic/Longyearbyen',
        'Asia/Aden',
        'Asia/Almaty',
        'Asia/Amman',
        'Asia/Anadyr',
        'Asia/Aqtau',
        'Asia/Aqtobe',
        'Asia/Ashgabat',
        'Asia/Ashkhabad',
        'Asia/Atyrau',
        'Asia/Baghdad',
        'Asia/Bahrain',
        'Asia/Baku',
        'Asia/Bangkok',
        'Asia/Barnaul',
        'Asia/Beirut',
        'Asia/Bishkek',
        'Asia/Brunei',
        'Asia/Calcutta',
        'Asia/Chita',
        'Asia/Choibalsan',
        'Asia/Chongqing',
        'Asia/Chungking',
        'Asia/Colombo',
        'Asia/Dacca',
        'Asia/Damascus',
        'Asia/Dhaka',
        'Asia/Dili',
        'Asia/Dubai',
        'Asia/Dushanbe',
        'Asia/Famagusta',
        'Asia/Gaza',
        'Asia/Harbin',
        'Asia/Hebron',
        'Asia/Ho_Chi_Minh',
        'Asia/Hong_Kong',
        'Asia/Hovd',
        'Asia/Irkutsk',
        'Asia/Istanbul',
        'Asia/Jakarta',
        'Asia/Jayapura',
        'Asia/Jerusalem',
        'Asia/Kabul',
        'Asia/Kamchatka',
        'Asia/Karachi',
        'Asia/Kashgar',
        'Asia/Kathmandu',
        'Asia/Katmandu',
        'Asia/Khandyga',
        'Asia/Kolkata',
        'Asia/Krasnoyarsk',
        'Asia/Kuala_Lumpur',
        'Asia/Kuching',
        'Asia/Kuwait',
        'Asia/Macao',
        'Asia/Macau',
        'Asia/Magadan',
        'Asia/Makassar',
        'Asia/Manila',
        'Asia/Muscat',
        'Asia/Nicosia',
        'Asia/Novokuznetsk',
        'Asia/Novosibirsk',
        'Asia/Omsk',
        'Asia/Oral',
        'Asia/Phnom_Penh',
        'Asia/Pontianak',
        'Asia/Pyongyang',
        'Asia/Qatar',
        'Asia/Qostanay',
        'Asia/Qyzylorda',
        'Asia/Rangoon',
        'Asia/Riyadh',
        'Asia/Saigon',
        'Asia/Sakhalin',
        'Asia/Samarkand',
        'Asia/Seoul',
        'Asia/Shanghai',
        'Asia/Singapore',
        'Asia/Srednekolymsk',
        'Asia/Taipei',
        'Asia/Tashkent',
        'Asia/Tbilisi',
        'Asia/Tehran',
        'Asia/Tel_Aviv',
        'Asia/Thimbu',
        'Asia/Thimphu',
        'Asia/Tokyo',
        'Asia/Tomsk',
        'Asia/Ujung_Pandang',
        'Asia/Ulaanbaatar',
        'Asia/Ulan_Bator',
        'Asia/Urumqi',
        'Asia/Ust-Nera',
        'Asia/Vientiane',
        'Asia/Vladivostok',
        'Asia/Yakutsk',
        'Asia/Yangon',
        'Asia/Yekaterinburg',
        'Asia/Yerevan',
        'Atlantic/Azores',
        'Atlantic/Bermuda',
        'Atlantic/Canary',
        'Atlantic/Cape_Verde',
        'Atlantic/Faeroe',
        'Atlantic/Faroe',
        'Atlantic/Jan_Mayen',
        'Atlantic/Madeira',
        'Atlantic/Reykjavik',
        'Atlantic/South_Georgia',
        'Atlantic/St_Helena',
        'Atlantic/Stanley',
        'Australia/ACT',
        'Australia/Adelaide',
        'Australia/Brisbane',
        'Australia/Broken_Hill',
        'Australia/Canberra',
        'Australia/Currie',
        'Australia/Darwin',
        'Australia/Eucla',
        'Australia/Hobart',
        'Australia/LHI',
        'Australia/Lindeman',
        'Australia/Lord_Howe',
        'Australia/Melbourne',
        'Australia/NSW',
        'Australia/North',
        'Australia/Perth',
        'Australia/Queensland',
        'Australia/South',
        'Australia/Sydney',
        'Australia/Tasmania',
        'Australia/Victoria',
        'Australia/West',
        'Australia/Yancowinna',
        'Brazil/Acre',
        'Brazil/DeNoronha',
        'Brazil/East',
        'Brazil/West',
        'CET',
        'CST6CDT',
        'Canada/Atlantic',
        'Canada/Central',
        'Canada/Eastern',
        'Canada/Mountain',
        'Canada/Newfoundland',
        'Canada/Pacific',
        'Canada/Saskatchewan',
        'Canada/Yukon',
        'Chile/Continental',
        'Chile/EasterIsland',
        'Cuba',
        'EET',
        'EST',
        'EST5EDT',
        'Egypt',
        'Eire',
        'Etc/GMT',
        'Etc/GMT+0',
        'Etc/GMT+1',
        'Etc/GMT+10',
        'Etc/GMT+11',
        'Etc/GMT+12',
        'Etc/GMT+2',
        'Etc/GMT+3',
        'Etc/GMT+4',
        'Etc/GMT+5',
        'Etc/GMT+6',
        'Etc/GMT+7',
        'Etc/GMT+8',
        'Etc/GMT+9',
        'Etc/GMT-0',
        'Etc/GMT-1',
        'Etc/GMT-10',
        'Etc/GMT-11',
        'Etc/GMT-12',
        'Etc/GMT-13',
        'Etc/GMT-14',
        'Etc/GMT-2',
        'Etc/GMT-3',
        'Etc/GMT-4',
        'Etc/GMT-5',
        'Etc/GMT-6',
        'Etc/GMT-7',
        'Etc/GMT-8',
        'Etc/GMT-9',
        'Etc/GMT0',
        'Etc/Greenwich',
        'Etc/UCT',
        'Etc/UTC',
        'Etc/Universal',
        'Etc/Zulu',
        'Europe/Amsterdam',
        'Europe/Andorra',
        'Europe/Astrakhan',
        'Europe/Athens',
        'Europe/Belfast',
        'Europe/Belgrade',
        'Europe/Berlin',
        'Europe/Bratislava',
        'Europe/Brussels',
        'Europe/Bucharest',
        'Europe/Budapest',
        'Europe/Busingen',
        'Europe/Chisinau',
        'Europe/Copenhagen',
        'Europe/Dublin',
        'Europe/Gibraltar',
        'Europe/Guernsey',
        'Europe/Helsinki',
        'Europe/Isle_of_Man',
        'Europe/Istanbul',
        'Europe/Jersey',
        'Europe/Kaliningrad',
        'Europe/Kiev',
        'Europe/Kirov',
        'Europe/Kyiv',
        'Europe/Lisbon',
        'Europe/Ljubljana',
        'Europe/London',
        'Europe/Luxembourg',
        'Europe/Madrid',
        'Europe/Malta',
        'Europe/Mariehamn',
        'Europe/Minsk',
        'Europe/Monaco',
        'Europe/Moscow',
        'Europe/Nicosia',
        'Europe/Oslo',
        'Europe/Paris',
        'Europe/Podgorica',
        'Europe/Prague',
        'Europe/Riga',
        'Europe/Rome',
        'Europe/Samara',
        'Europe/San_Marino',
        'Europe/Sarajevo',
        'Europe/Saratov',
        'Europe/Simferopol',
        'Europe/Skopje',
        'Europe/Sofia',
        'Europe/Stockholm',
        'Europe/Tallinn',
        'Europe/Tirane',
        'Europe/Tiraspol',
        'Europe/Ulyanovsk',
        'Europe/Uzhgorod',
        'Europe/Vaduz',
        'Europe/Vatican',
        'Europe/Vienna',
        'Europe/Vilnius',
        'Europe/Volgograd',
        'Europe/Warsaw',
        'Europe/Zagreb',
        'Europe/Zaporozhye',
        'Europe/Zurich',
        'Factory',
        'GB',
        'GB-Eire',
        'GMT',
        'GMT+0',
        'GMT-0',
        'GMT0',
        'Greenwich',
        'HST',
        'Hongkong',
        'Iceland',
        'Indian/Antananarivo',
        'Indian/Chagos',
        'Indian/Christmas',
        'Indian/Cocos',
        'Indian/Comoro',
        'Indian/Kerguelen',
        'Indian/Mahe',
        'Indian/Maldives',
        'Indian/Mauritius',
        'Indian/Mayotte',
        'Indian/Reunion',
        'Iran',
        'Israel',
        'Jamaica',
        'Japan',
        'Kwajalein',
        'Libya',
        'MET',
        'MST',
        'MST7MDT',
        'Mexico/BajaNorte',
        'Mexico/BajaSur',
        'Mexico/General',
        'NZ',
        'NZ-CHAT',
        'Navajo',
        'PRC',
        'PST8PDT',
        'Pacific/Apia',
        'Pacific/Auckland',
        'Pacific/Bougainville',
        'Pacific/Chatham',
        'Pacific/Chuuk',
        'Pacific/Easter',
        'Pacific/Efate',
        'Pacific/Enderbury',
        'Pacific/Fakaofo',
        'Pacific/Fiji',
        'Pacific/Funafuti',
        'Pacific/Galapagos',
        'Pacific/Gambier',
        'Pacific/Guadalcanal',
        'Pacific/Guam',
        'Pacific/Honolulu',
        'Pacific/Johnston',
        'Pacific/Kanton',
        'Pacific/Kiritimati',
        'Pacific/Kosrae',
        'Pacific/Kwajalein',
        'Pacific/Majuro',
        'Pacific/Marquesas',
        'Pacific/Midway',
        'Pacific/Nauru',
        'Pacific/Niue',
        'Pacific/Norfolk',
        'Pacific/Noumea',
        'Pacific/Pago_Pago',
        'Pacific/Palau',
        'Pacific/Pitcairn',
        'Pacific/Pohnpei',
        'Pacific/Ponape',
        'Pacific/Port_Moresby',
        'Pacific/Rarotonga',
        'Pacific/Saipan',
        'Pacific/Samoa',
        'Pacific/Tahiti',
        'Pacific/Tarawa',
        'Pacific/Tongatapu',
        'Pacific/Truk',
        'Pacific/Wake',
        'Pacific/Wallis',
        'Pacific/Yap',
        'Poland',
        'Portugal',
        'ROC',
        'ROK',
        'Singapore',
        'Turkey',
        'UCT',
        'US/Alaska',
        'US/Aleutian',
        'US/Arizona',
        'US/Central',
        'US/East-Indiana',
        'US/Eastern',
        'US/Hawaii',
        'US/Indiana-Starke',
        'US/Michigan',
        'US/Mountain',
        'US/Pacific',
        'US/Samoa',
        'UTC',
        'Universal',
        'W-SU',
        'WET',
        'Zulu',
      ]),
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.power_pet_door_timezone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timezone',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timezone',
    'unique_id': '192.0.2.10:3000-timezone',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[select][select.power_pet_door_timezone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Timezone',
      'options': list([
        'Use Home Assistant timezone',
        'Africa/Abidjan',
        'Africa/Accra',
        'Africa/Addis_Ababa',
        'Africa/Algiers',
        'Africa/Asmara',
        'Africa/Asmera',
        'Africa/Bamako',
        'Africa/Bangui',
        'Africa/Banjul',
        'Africa/Bissau',
        'Africa/Blantyre',
        'Africa/Brazzaville',
        'Africa/Bujumbura',
        'Africa/Cairo',
        'Africa/Casablanca',
        'Africa/Ceuta',
        'Africa/Conakry',
        'Africa/Dakar',
        'Africa/Dar_es_Salaam',
        'Africa/Djibouti',
        'Africa/Douala',
        'Africa/El_Aaiun',
        'Africa/Freetown',
        'Africa/Gaborone',
        'Africa/Harare',
        'Africa/Johannesburg',
        'Africa/Juba',
        'Africa/Kampala',
        'Africa/Khartoum',
        'Africa/Kigali',
        'Africa/Kinshasa',
        'Africa/Lagos',
        'Africa/Libreville',
        'Africa/Lome',
        'Africa/Luanda',
        'Africa/Lubumbashi',
        'Africa/Lusaka',
        'Africa/Malabo',
        'Africa/Maputo',
        'Africa/Maseru',
        'Africa/Mbabane',
        'Africa/Mogadishu',
        'Africa/Monrovia',
        'Africa/Nairobi',
        'Africa/Ndjamena',
        'Africa/Niamey',
        'Africa/Nouakchott',
        'Africa/Ouagadougou',
        'Africa/Porto-Novo',
        'Africa/Sao_Tome',
        'Africa/Timbuktu',
        'Africa/Tripoli',
        'Africa/Tunis',
        'Africa/Windhoek',
        'America/Adak',
        'America/Anchorage',
        'America/Anguilla',
        'America/Antigua',
        'America/Araguaina',
        'America/Argentina/Buenos_Aires',
        'America/Argentina/Catamarca',
        'America/Argentina/ComodRivadavia',
        'America/Argentina/Cordoba',
        'America/Argentina/Jujuy',
        'America/Argentina/La_Rioja',
        'America/Argentina/Mendoza',
        'America/Argentina/Rio_Gallegos',
        'America/Argentina/Salta',
        'America/Argentina/San_Juan',
        'America/Argentina/San_Luis',
        'America/Argentina/Tucuman',
        'America/Argentina/Ushuaia',
        'America/Aruba',
        'America/Asuncion',
        'America/Atikokan',
        'America/Atka',
        'America/Bahia',
        'America/Bahia_Banderas',
        'America/Barbados',
        'America/Belem',
        'America/Belize',
        'America/Blanc-Sablon',
        'America/Boa_Vista',
        'America/Bogota',
        'America/Boise',
        'America/Buenos_Aires',
        'America/Cambridge_Bay',
        'America/Campo_Grande',
        'America/Cancun',
        'America/Caracas',
        'America/Catamarca',
        'America/Cayenne',
        'America/Cayman',
        'America/Chicago',
        'America/Chihuahua',
        'America/Ciudad_Juarez',
        'America/Coral_Harbour',
        'America/Cordoba',
        'America/Costa_Rica',
        'America/Coyhaique',
        'America/Creston',
        'America/Cuiaba',
        'America/Curacao',
        'America/Danmarkshavn',
        'America/Dawson',
        'America/Dawson_Creek',
        'America/Denver',
        'America/Detroit',
        'America/Dominica',
        'America/Edmonton',
        'America/Eirunepe',
        'America/El_Salvador',
        'America/Ensenada',
        'America/Fort_Nelson',
        'America/Fort_Wayne',
        'America/Fortaleza',
        'America/Glace_Bay',
        'America/Godthab',
        'America/Goose_Bay',
        'America/Grand_Turk',
        'America/Grenada',
        'America/Guadeloupe',
        'America/Guatemala',
        'America/Guayaquil',
        'America/Guyana',
        'America/Halifax',
        'America/Havana',
        'America/Hermosillo',
        'America/Indiana/Indianapolis',
        'America/Indiana/Knox',
        'America/Indiana/Marengo',
        'America/Indiana/Petersburg',
        'America/Indiana/Tell_City',
        'America/Indiana/Vevay',
        'America/Indiana/Vincennes',
        'America/Indiana/Winamac',
        'America/Indianapolis',
        'America/Inuvik',
        'America/Iqaluit',
        'America/Jamaica',
        'America/Jujuy',
        'America/Juneau',
        'America/Kentucky/Louisville',
        'America/Kentucky/Monticello',
        'America/Knox_IN',
        'America/Kralendijk',
        'America/La_Paz',
        'America/Lima',
        'America/Los_Angeles',
        'America/Louisville',
        'America/Lower_Princes',
        'America/Maceio',
        'America/Managua',
        'America/Manaus',
        'America/Marigot',
        'America/Martinique',
        'America/Matamoros',
        'America/Mazatlan',
        'America/Mendoza',
        'America/Menominee',
        'America/Merida',
        'America/Metlakatla',
        'America/Mexico_City',
        'America/Miquelon',
        'America/Moncton',
        'America/Monterrey',
        'America/Montevideo',
        'America/Montreal',
        'America/Montserrat',
        'America/Nassau',
        'America/New_York',
        'America/Nipigon',
        'America/Nome',
        'America/Noronha',
        'America/North_Dakota/Beulah',
        'America/North_Dakota/Center',
        'America/North_Dakota/New_Salem',
        'America/Nuuk',
        'America/Ojinaga',
        'America/Panama',
        'America/Pangnirtung',
        'America/Paramaribo',
        'America/Phoenix',
        'America/Port-au-Prince',
        'America/Port_of_Spain',
        'America/Porto_Acre',
        'America/Porto_Velho',
        'America/Puerto_Rico',
        'America/Punta_Arenas',
        'America/Rainy_River',
        'America/Rankin_Inlet',
        'America/Recife',
        'America/Regina',
        'America/Resolute',
        'America/Rio_Branco',
        'America/Rosario',
        'America/Santa_Isabel',
        'America/Santarem',
        'America/Santiago',
        'America/Santo_Domingo',
        'America/Sao_Paulo',
        'America/Scoresbysund',
        'America/Shiprock',
        'America/Sitka',
        'America/St_Barthelemy',
        'America/St_Johns',
        'America/St_Kitts',
        'America/St_Lucia',
        'America/St_Thomas',
        'America/St_Vincent',
        'America/Swift_Current',
        'America/Tegucigalpa',
        'America/Thule',
        'America/Thunder_Bay',
        'America/Tijuana',
        'America/Toronto',
        'America/Tortola',
        'America/Vancouver',
        'America/Virgin',
        'America/Whitehorse',
        'America/Winnipeg',
        'America/Yakutat',
        'America/Yellowknife',
        'Antarctica/Casey',
        'Antarctica/Davis',
        'Antarctica/DumontDUrville',
        'Antarctica/Macquarie',
        'Antarctica/Mawson',
        'Antarctica/McMurdo',
        'Antarctica/Palmer',
        'Antarctica/Rothera',
        'Antarctica/South_Pole',
        'Antarctica/Syowa',
        'Antarctica/Troll',
        'Antarctica/Vostok',
        'Arctic/Longyearbyen',
        'Asia/Aden',
        'Asia/Almaty',
        'Asia/Amman',
        'Asia/Anadyr',
        'Asia/Aqtau',
        'Asia/Aqtobe',
        'Asia/Ashgabat',
        'Asia/Ashkhabad',
        'Asia/Atyrau',
        'Asia/Baghdad',
        'Asia/Bahrain',
        'Asia/Baku',
        'Asia/Bangkok',
        'Asia/Barnaul',
        'Asia/Beirut',
        'Asia/Bishkek',
        'Asia/Brunei',
        'Asia/Calcutta',
        'Asia/Chita',
        'Asia/Choibalsan',
        'Asia/Chongqing',
        'Asia/Chungking',
        'Asia/Colombo',
        'Asia/Dacca',
        'Asia/Damascus',
        'Asia/Dhaka',
        'Asia/Dili',
        'Asia/Dubai',
        'Asia/Dushanbe',
        'Asia/Famagusta',
        'Asia/Gaza',
        'Asia/Harbin',
        'Asia/Hebron',
        'Asia/Ho_Chi_Minh',
        'Asia/Hong_Kong',
        'Asia/Hovd',
        'Asia/Irkutsk',
        'Asia/Istanbul',
        'Asia/Jakarta',
        'Asia/Jayapura',
        'Asia/Jerusalem',
        'Asia/Kabul',
        'Asia/Kamchatka',
        'Asia/Karachi',
        'Asia/Kashgar',
        'Asia/Kathmandu',
        'Asia/Katmandu',
        'Asia/Khandyga',
        'Asia/Kolkata',
        'Asia/Krasnoyarsk',
        'Asia/Kuala_Lumpur',
        'Asia/Kuching',
        'Asia/Kuwait',
        'Asia/Macao',
        'Asia/Macau',
        'Asia/Magadan',
        'Asia/Makassar',
        'Asia/Manila',
        'Asia/Muscat',
        'Asia/Nicosia',
        'Asia/Novokuznetsk',
        'Asia/Novosibirsk',
        'Asia/Omsk',
        'Asia/Oral',
        'Asia/Phnom_Penh',
        'Asia/Pontianak',
        'Asia/Pyongyang',
        'Asia/Qatar',
        'Asia/Qostanay',
        'Asia/Qyzylorda',
        'Asia/Rangoon',
        'Asia/Riyadh',
        'Asia/Saigon',
        'Asia/Sakhalin',
        'Asia/Samarkand',
        'Asia/Seoul',
        'Asia/Shanghai',
        'Asia/Singapore',
        'Asia/Srednekolymsk',
        'Asia/Taipei',
        'Asia/Tashkent',
        'Asia/Tbilisi',
        'Asia/Tehran',
        'Asia/Tel_Aviv',
        'Asia/Thimbu',
        'Asia/Thimphu',
        'Asia/Tokyo',
        'Asia/Tomsk',
        'Asia/Ujung_Pandang',
        'Asia/Ulaanbaatar',
        'Asia/Ulan_Bator',
        'Asia/Urumqi',
        'Asia/Ust-Nera',
        'Asia/Vientiane',
        'Asia/Vladivostok',
        'Asia/Yakutsk',
        'Asia/Yangon',
        'Asia/Yekaterinburg',
        'Asia/Yerevan',
        'Atlantic/Azores',
        'Atlantic/Bermuda',
        'Atlantic/Canary',
        'Atlantic/Cape_Verde',
        'Atlantic/Faeroe',
        'Atlantic/Faroe',
        'Atlantic/Jan_Mayen',
        'Atlantic/Madeira',
        'Atlantic/Reykjavik',
        'Atlantic/South_Georgia',
        'Atlantic/St_Helena',
        'Atlantic/Stanley',
        'Australia/ACT',
        'Australia/Adelaide',
        'Australia/Brisbane',
        'Australia/Broken_Hill',
        'Australia/Canberra',
        'Australia/Currie',
        'Australia/Darwin',
        'Australia/Eucla',
        'Australia/Hobart',
        'Australia/LHI',
        'Australia/Lindeman',
        'Australia/Lord_Howe',
        'Australia/Melbourne',
        'Australia/NSW',
        'Australia/North',
        'Australia/Perth',
        'Australia/Queensland',
        'Australia/South',
        'Australia/Sydney',
        'Australia/Tasmania',
        'Australia/Victoria',
        'Australia/West',
        'Australia/Yancowinna',
        'Brazil/Acre',
        'Brazil/DeNoronha',
        'Brazil/East',
        'Brazil/West',
        'CET',
        'CST6CDT',
        'Canada/Atlantic',
        'Canada/Central',
        'Canada/Eastern',
        'Canada/Mountain',
        'Canada/Newfoundland',
        'Canada/Pacific',
        'Canada/Saskatchewan',
        'Canada/Yukon',
        'Chile/Continental',
        'Chile/EasterIsland',
        'Cuba',
        'EET',
        'EST',
        'EST5EDT',
        'Egypt',
        'Eire',
        'Etc/GMT',
        'Etc/GMT+0',
        'Etc/GMT+1',
        'Etc/GMT+10',
        'Etc/GMT+11',
        'Etc/GMT+12',
        'Etc/GMT+2',
        'Etc/GMT+3',
        'Etc/GMT+4',
        'Etc/GMT+5',
        'Etc/GMT+6',
        'Etc/GMT+7',
        'Etc/GMT+8',
        'Etc/GMT+9',
        'Etc/GMT-0',
        'Etc/GMT-1',
        'Etc/GMT-10',
        'Etc/GMT-11',
        'Etc/GMT-12',
        'Etc/GMT-13',
        'Etc/GMT-14',
        'Etc/GMT-2',
        'Etc/GMT-3',
        'Etc/GMT-4',
        'Etc/GMT-5',
        'Etc/GMT-6',
        'Etc/GMT-7',
        'Etc/GMT-8',
        'Etc/GMT-9',
        'Etc/GMT0',
        'Etc/Greenwich',
        'Etc/UCT',
        'Etc/UTC',
        'Etc/Universal',
        'Etc/Zulu',
        'Europe/Amsterdam',
        'Europe/Andorra',
        'Europe/Astrakhan',
        'Europe/Athens',
        'Europe/Belfast',
        'Europe/Belgrade',
        'Europe/Berlin',
        'Europe/Bratislava',
        'Europe/Brussels',
        'Europe/Bucharest',
        'Europe/Budapest',
        'Europe/Busingen',
        'Europe/Chisinau',
        'Europe/Copenhagen',
        'Europe/Dublin',
        'Europe/Gibraltar',
        'Europe/Guernsey',
        'Europe/Helsinki',
        'Europe/Isle_of_Man',
        'Europe/Istanbul',
        'Europe/Jersey',
        'Europe/Kaliningrad',
        'Europe/Kiev',
        'Europe/Kirov',
        'Europe/Kyiv',
        'Europe/Lisbon',
        'Europe/Ljubljana',
        'Europe/London',
        'Europe/Luxembourg',
        'Europe/Madrid',
        'Europe/Malta',
        'Europe/Mariehamn',
        'Europe/Minsk',
        'Europe/Monaco',
        'Europe/Moscow',
        'Europe/Nicosia',
        'Europe/Oslo',
        'Europe/Paris',
        'Europe/Podgorica',
        'Europe/Prague',
        'Europe/Riga',
        'Europe/Rome',
        'Europe/Samara',
        'Europe/San_Marino',
        'Europe/Sarajevo',
        'Europe/Saratov',
        'Europe/Simferopol',
        'Europe/Skopje',
        'Europe/Sofia',
        'Europe/Stockholm',
        'Europe/Tallinn',
        'Europe/Tirane',
        'Europe/Tiraspol',
        'Europe/Ulyanovsk',
        'Europe/Uzhgorod',
        'Europe/Vaduz',
        'Europe/Vatican',
        'Europe/Vienna',
        'Europe/Vilnius',
        'Europe/Volgograd',
        'Europe/Warsaw',
        'Europe/Zagreb',
        'Europe/Zaporozhye',
        'Europe/Zurich',
        'Factory',
        'GB',
        'GB-Eire',
        'GMT',
        'GMT+0',
        'GMT-0',
        'GMT0',
        'Greenwich',
        'HST',
        'Hongkong',
        'Iceland',
        'Indian/Antananarivo',
        'Indian/Chagos',
        'Indian/Christmas',
        'Indian/Cocos',
        'Indian/Comoro',
        'Indian/Kerguelen',
        'Indian/Mahe',
        'Indian/Maldives',
        'Indian/Mauritius',
        'Indian/Mayotte',
        'Indian/Reunion',
        'Iran',
        'Israel',
        'Jamaica',
        'Japan',
        'Kwajalein',
        'Libya',
        'MET',
        'MST',
        'MST7MDT',
        'Mexico/BajaNorte',
        'Mexico/BajaSur',
        'Mexico/General',
        'NZ',
        'NZ-CHAT',
        'Navajo',
        'PRC',
        'PST8PDT',
        'Pacific/Apia',
        'Pacific/Auckland',
        'Pacific/Bougainville',
        'Pacific/Chatham',
        'Pacific/Chuuk',
        'Pacific/Easter',
        'Pacific/Efate',
        'Pacific/Enderbury',
        'Pacific/Fakaofo',
        'Pacific/Fiji',
        'Pacific/Funafuti',
        'Pacific/Galapagos',
        'Pacific/Gambier',
        'Pacific/Guadalcanal',
        'Pacific/Guam',
        'Pacific/Honolulu',
        'Pacific/Johnston',
        'Pacific/Kanton',
        'Pacific/Kiritimati',
        'Pacific/Kosrae',
        'Pacific/Kwajalein',
        'Pacific/Majuro',
        'Pacific/Marquesas',
        'Pacific/Midway',
        'Pacific/Nauru',
        'Pacific/Niue',
        'Pacific/Norfolk',
        'Pacific/Noumea',
        'Pacific/Pago_Pago',
        'Pacific/Palau',
        'Pacific/Pitcairn',
        'Pacific/Pohnpei',
        'Pacific/Ponape',
        'Pacific/Port_Moresby',
        'Pacific/Rarotonga',
        'Pacific/Saipan',
        'Pacific/Samoa',
        'Pacific/Tahiti',
        'Pacific/Tarawa',
        'Pacific/Tongatapu',
        'Pacific/Truk',
        'Pacific/Wake',
        'Pacific/Wallis',
        'Pacific/Yap',
        'Poland',
        'Portugal',
        'ROC',
        'ROK',
        'Singapore',
        'Turkey',
        'UCT',
        'US/Alaska',
        'US/Aleutian',
        'US/Arizona',
        'US/Central',
        'US/East-Indiana',
        'US/Eastern',
        'US/Hawaii',
        'US/Indiana-Starke',
        'US/Michigan',
        'US/Mountain',
        'US/Pacific',
        'US/Samoa',
        'UTC',
        'Universal',
        'W-SU',
        'WET',
        'Zulu',
      ]),
      'posix_tz': 'EST5EDT,M3.2.0,M11.1.0',
    }),
    'context': <ANY>,
    'entity_id': 'select.power_pet_door_timezone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'America/Detroit',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_battery-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.power_pet_door_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery',
    'unique_id': '192.0.2.10:3000-battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Power Pet Door Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '87',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_door_clock-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.power_pet_door_door_clock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Door clock',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_time',
    'unique_id': '192.0.2.10:3000-device_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_door_clock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Door clock',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_door_clock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-08-23 12:00:00',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_door_status-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'idle',
        'closed',
        'rising',
        'slowing',
        'holding',
        'keepup',
        'closing',
        'closing_top_open',
        'closing_mid_open',
        'unknown',
      ]),
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.power_pet_door_door_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Door status',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': '192.0.2.10:3000-status',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_door_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Power Pet Door Door status',
      'options': list([
        'idle',
        'closed',
        'rising',
        'slowing',
        'holding',
        'keepup',
        'closing',
        'closing_top_open',
        'closing_mid_open',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_door_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_latency-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.power_pet_door_latency',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Latency',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latency',
    'unique_id': '192.0.2.10:3000-latency',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_latency-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Power Pet Door Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_latency',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.0',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_total_auto_retracts-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.power_pet_door_total_auto_retracts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total auto-retracts',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_auto_retracts',
    'unique_id': '192.0.2.10:3000-total_auto_retracts',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_total_auto_retracts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Total auto-retracts',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_total_auto_retracts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_total_open_cycles-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.power_pet_door_total_open_cycles',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total open cycles',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_open_cycles',
    'unique_id': '192.0.2.10:3000-total_open_cycles',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[sensor][sensor.power_pet_door_total_open_cycles-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Power Pet Door Total open cycles',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.power_pet_door_total_open_cycles',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1234',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_auto_retract-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_auto_retract',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Auto retract',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_retract',
    'unique_id': '192.0.2.10:3000-auto_retract',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_auto_retract-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Auto retract',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_auto_retract',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_connection-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Connection',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection',
    'unique_id': '192.0.2.10:3000-connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_connection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_connection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_inside_sensor-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_inside_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Inside sensor',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'inside_sensor',
    'unique_id': '192.0.2.10:3000-inside_sensor',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_inside_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Inside sensor',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_inside_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_inside_sensor_off-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_notify_inside_sensor_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Notify inside sensor off',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notify_inside_off',
    'unique_id': '192.0.2.10:3000-notify_inside_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_inside_sensor_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Notify inside sensor off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_notify_inside_sensor_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_inside_sensor_on-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_notify_inside_sensor_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Notify inside sensor on',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notify_inside_on',
    'unique_id': '192.0.2.10:3000-notify_inside_on',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_inside_sensor_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Notify inside sensor on',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_notify_inside_sensor_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_low_battery-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_notify_low_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Notify low battery',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notify_low_battery',
    'unique_id': '192.0.2.10:3000-notify_low_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_low_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Notify low battery',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_notify_low_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_outside_sensor_off-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_notify_outside_sensor_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Notify outside sensor off',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notify_outside_off',
    'unique_id': '192.0.2.10:3000-notify_outside_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_outside_sensor_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Notify outside sensor off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_notify_outside_sensor_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_outside_sensor_on-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_notify_outside_sensor_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Notify outside sensor on',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notify_outside_on',
    'unique_id': '192.0.2.10:3000-notify_outside_on',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_notify_outside_sensor_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Notify outside sensor on',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_notify_outside_sensor_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_outside_safety_lock-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_outside_safety_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Outside safety lock',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outside_safety_lock',
    'unique_id': '192.0.2.10:3000-outside_safety_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_outside_safety_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Outside safety lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_outside_safety_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_outside_sensor-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_outside_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Outside sensor',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outside_sensor',
    'unique_id': '192.0.2.10:3000-outside_sensor',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_outside_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Outside sensor',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_outside_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_pet_proximity_keep_open-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_pet_proximity_keep_open',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Pet proximity keep open',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pet_proximity_keep_open',
    'unique_id': '192.0.2.10:3000-pet_proximity_keep_open',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_pet_proximity_keep_open-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Pet proximity keep open',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_pet_proximity_keep_open',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_power-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.power_pet_door_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': '192.0.2.10:3000-power',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Power',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_schedule_enabled-entry]
  dict({
    '_cache': dict({
    }),
    'aliases': list([
    ]),
    'area_id': None,
    'capabilities': None,
    'categories': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'created_at': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.power_pet_door_schedule_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': list([
    ]),
    'modified_at': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Schedule enabled',
    'platform': 'powerpetdoor',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto',
    'unique_id': '192.0.2.10:3000-auto',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface_matches_its_snapshot[switch][switch.power_pet_door_schedule_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Power Pet Door Schedule enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.power_pet_door_schedule_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
